# codespaces-entity-detection

entity-profiler/: .gitignore  DOCUMENTATION_INDEX.md  LICENSE  PLATFORM_CAPABILITIES.md  README.md  pyproject.toml
entity-profiler/.devcontainer/: devcontainer.json
entity-profiler/.github/workflows/: ci.yml
entity-profiler/data/: README.md  health_config.example.json  health_config.json  safety_config.example.json
entity-profiler/docker/: Dockerfile
entity-profiler/docs/: data_model.md  determinism_and_reproducibility.md  evaluation_and_benchmarks.md  examples.md  pattern_of_life.md  profiling_pipeline.md  state_of_the_art_and_comparison.md  system_architecture.md  use_cases_and_impact.md
entity-profiler/evaluation/: README.md  detection_benchmark.py  fall_benchmark.py  gait_reid_benchmark.py  health_safety_scenarios.py  latency_throughput.py  physionet_gait_advanced.py  physionet_gait_summary.py
entity-profiler/evaluation/configs/: coco_val_detection_example.json  fall_synth_example.json  health_fall_synth.json  mot17_detection_example.json
entity-profiler/evaluation/datasets/: coco_person_index.py  mot17_index.py  ou_mvlp_index.py  physionet_multi_gait_posture_index.py
entity-profiler/examples/: api_usage.md  dashboard.html  fitbit_pull.py  rtsp_puller.py  rtsp_snapshot_to_ingest.sh  run_end_to_end_demo.sh  sample_video_pairs.md
entity-profiler/tests/: test_entity_store.py  test_evaluation_scripts_smoke.py  test_fall_activity.py  test_feature_fusion.py  test_health_rules.py  test_imports.py  test_safety_rules.py  test_wearable_rules.py
(+54 files in other folders)
