[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entity-profiler"
version = "0.1.0"
description = "Deterministic profiling of unknown individuals from low-resolution video using gait, soft biometrics, and pattern-of-life."
authors = [{ name = "Entity Profiler Authors", email = "example@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "opencv-python==4.10.0.84",
    "python-multipart==0.0.9",
    "networkx==3.3",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.5",
    "pydantic==2.8.2",
    "joblib==1.4.2",
    "matplotlib==3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "flake8>=7.0"
]

[tool.black]
line-length = 88
target-version = ["py311"]
